Some code changes